# themacfiles

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  README.md  deny.toml  macos-ml-models.txt  macos-not-secure-by-defauly.md
crates/macknows/: Cargo.toml
crates/macknows/src/: category_test.rs  db.rs  db_test.rs  decode.rs  decode_test.rs  error.rs  lib.rs  main.rs  output.rs  output_test.rs  schema.rs  testutil.rs
crates/macstalker/: Cargo.toml
crates/macstalker/src/: db.rs  decode_test.rs  error.rs  lib.rs  main.rs  output.rs  output_test.rs  schema.rs
crates/themacfiles/: Cargo.toml
crates/themacfiles/src/: app_profile.rs  app_profile_test.rs  category.rs  db.rs  db_test.rs  decode.rs  error.rs  extract.rs  extract_detail.rs  lib.rs  main.rs  output.rs  output_summary.rs  output_summary_detail.rs  output_test.rs  schema.rs  testutil.rs
scripts/: dump-all-dbs.sh  dump-app-usage.sh  dump-bluetooth-devices.sh  dump-entity.sh  dump-intelligence.sh  dump-knowledge-graph.sh  dump-life-events.sh  dump-music-history.sh  dump-relationships.sh  dump-siri-remembers.sh
