[workspace]
members = [
    "crates/macstalker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Restriction cherry-picks
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "warn"
unwrap_used = "deny"
indexing_slicing = "warn"
panic = "deny"
dbg_macro = "deny"
# Pedantic overrides — see clippy.toml for rationale
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
wildcard_imports = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
used_underscore_binding = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
items_after_statements = "allow"
similar_names = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tabled = "0.20"
rusqlite = { version = "0.35", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.13"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.bench]
lto = false
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = true
# Do NOT set panic = "abort" — catch_unwind is used at Rayon thread boundaries
