[package]
name = "macknows"
description = "Apple telemetry decoder — reads analyticsd SQLite databases and produces human-readable reports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "macknows"
path = "src/main.rs"

[lib]
name = "macknows"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
