[package]
name = "macstalker"
description = "See what Apple collects about you — decodes analyticsd SQLite databases into human-readable reports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "macstalker"
path = "src/main.rs"

[lib]
name = "macstalker"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
